--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -64,7 +64,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Railway", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -368,7 +368,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Vollkorn";
+  font-family: "Raleway";
   font-weight: 500;
   line-height: 1.2;
   color: inherit;
@@ -379,7 +379,10 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2rem;
+ /* font-size: 2rem; */
+ /* Changed font size to prevent "S" from "FRUSTRATIONS" from sticking
+    out of grid. */
+ font-size: 1.8rem;
 }
 
 h3, .h3 {
@@ -3975,7 +3978,7 @@ tbody.collapse.show {
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
