--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -65,7 +65,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 body {
   margin: 0;
   font-family: "Raleway", sans-serif;
-  font-size: 1rem;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
